2008-01-29 Peter Landgren <peter.talken@telia.com>
    * src/plugins/ExportVCalendar.py: 
    * src/plugins/ExportVCard.py:
      Encoding according to sys.getfilesystemencoding() in stead of hardcoded iso-8859-1

2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/EventNames.py: doc fixes and removal of self.label

2008-01-29 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/TimeLine.py:
	* src/Sort.py: Use fallback events e.g. baptism/burial when no birth or
	death events are available.

2008-01-29 Peter Landgren <peter.talken@telia.com>
    * src/plugins/ChangeNames.py: Improved capitalization rules for names with
    one prefix and multiple surnames with or without hyphen(s)

2008-01-28 Duncan Lithgow <dlithgow@gmail.com>
		   Raphael Ackermann <raphael.ackermann@gmail.com>
	*  src/plugins/Summary.py
	*  src/plugins/WebCal.py
	*  src/plugins/KinshipReport.py
	*  src/plugins/DescendReport.py
	*  src/plugins/DetDescendantReport.py
	*  src/plugins/ExtractCity.py
	*  src/plugins/EventNames.py
	*  src/plugins/DumpGenderStats.py
	*  src/plugins/Desbrowser.py
	*  src/plugins/Checkpoint.py
	*  src/plugins/OwnerEditor.py
	*  src/plugins/ChangeNames.py
	*  src/plugins/AncestorReport.py
	*  src/plugins/MarkerReport.py
	*  src/plugins/DateParserDisplayTest.py
	*  src/plugins/FindDupes.py
	*  src/plugins/SoundGen.py
	*  src/plugins/TestcaseGenerator.py
	*  src/plugins/Rebuild.py
	*  src/plugins/DescendChart.py
	*  src/plugins/EndOfLineReport.py
	*  src/plugins/AncestorChart.py
	*  src/plugins/DetAncestralReport.py
	*  src/plugins/CountAncestors.py
	*  src/plugins/Check.py
	*  src/plugins/EventCmp.py
	*  src/plugins/FamilyGroup.py
	*  src/plugins/RelCalc.py
	*  src/plugins/MediaManager.py
	*  src/plugins/ChangeTypes.py
	*  src/plugins/StatisticsChart.py
	*  src/plugins/FamilyLines.py
	*  src/plugins/PatchNames.py
	
2008-01-28 Duncan Lithgow <dlithgow@gmail.com>
	* various: add capitalization fixes according to HIG (plus ellipsis ...)