@@ -935,7 +935,7 @@ register_report(
     report_class = Calendar,
     options_class = CalendarOptions,
     modes = MODE_GUI | MODE_BKI | MODE_CLI,
-    translated_name = _("Calendar"),
+    translated_name = _("Calendar..."),
     status = _("Stable"),
     author_name = "Douglas S. Blank",
     author_email = "dblank@cs.brynmawr.edu",
@@ -948,7 +948,7 @@ register_report(
     report_class = CalendarReport,
     options_class = CalendarReportOptions,
     modes = MODE_GUI | MODE_BKI | MODE_CLI,
-    translated_name = _("Birthday and Anniversary Report"),
+    translated_name = _("Birthday and Anniversary Report..."),
     status = _("Stable"),
     author_name = "Douglas S. Blank",
     author_email = "dblank@cs.brynmawr.edu",
